--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <div class="col-md">
                               <p><strong>Create a new anime below!</strong></p>
                               <form id="anime-form">
-                                    <label for="anime-input">Add a new animal and hit submit!</label>
+                                    <label for="anime-input">Add a new anime here and hit submit!</label>
                                     <input type="text" id="anime-input"><br/>
                                     <input id="addAnime" type="submit" value="submit">
                                 </form>
