Re-added ajax call back to script

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <div class="container">
 
                     <div class="row">
-                           
+                           <!-- Anime gif form -->
                             <div class="col-md">
                               <p><strong>Create a new anime below!</strong></p>
                               <form id="anime-form">
@@ -28,11 +28,13 @@
                                 </form>
                             </div>
 
+                            <!--Anime Buttons will get dump here -->
                             <div class="col-md">
                                     <div id="animeButtons"></div>
                             </div>
                      </div>
                  
+                     <!-- Anime gifs will get dump here -->
                     <div class="row">
                             <div id="anime">                                
                             </div>
