Clean up index file and added last remaining script to get app working

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
                                     <div id="animeButtons"></div>
                             </div>
                      </div>
-                 
+                 <hr>
                      <!-- Anime gifs will get dump here -->
                     <div class="row">
+                            <h3>Gifs will appear here:</h3>
+                            
                             <div id="anime">                                
                             </div>
                     </div>
